force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/HRCSVC_Work_Order_SLA__c.object-meta.xml
<CustomObject>
    <label>Work Order SLA</label>
    <nameField>
        <displayFormat>SLA-{000000}</displayFormat>
        <label>Work Order SLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>