force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Cat_Code_31__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cat_Code_31__c</fullName>
    <label>Cat Code 31</label>
    <length>255</length>
    <type>Text</type>
</CustomField>