force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Country__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Countries</valueSetName>
    </valueSet>
</CustomField>