force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Customer__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Work Order SLAs</relationshipLabel>
    <relationshipName>Work_Order_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>