force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Early_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Early_Start_Time__c</fullName>
    <label>Early Start Time</label>
    <type>Time</type>
</CustomField>