force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Item_Customer_Calendar_Override__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Item_Customer_Calendar_Override__c</fullName>
    <label>Item Customer Calendar Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>