force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Item_Number__c</fullName>
    <label>Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>