force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Late_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Late_Start_Time__c</fullName>
    <label>Late Start Time</label>
    <type>Time</type>
</CustomField>