force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Miles_To__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Miles_To__c</fullName>
    <label>Miles To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>