force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Notes__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>