force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product_Family__c</fullName>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>