force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Response_Hours__c</fullName>
    <label>Response Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>