force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Super_Group__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Super_Group__c</fullName>
    <label>Super Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>