force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Time_To__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Time_To__c</fullName>
    <label>Time To</label>
    <type>Time</type>
</CustomField>