force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/fields/HRCSVC_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Work Order SLAs</relationshipLabel>
    <relationshipName>Work_Order_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>