force-app/main/default/objects/HRCSVC_Work_Order_SLA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HRCSVC_Customer__c</columns>
    <columns>HRCSVC_Pricing_Group__c</columns>
    <columns>HRCSVC_Super_Group__c</columns>
    <columns>HRCSVC_Product_Model__c</columns>
    <columns>HRCSVC_Product_Family__c</columns>
    <columns>HRCSVC_Item_Number__c</columns>
    <columns>HRCSVC_Work_Type__c</columns>
    <columns>HRCSVC_Response_Hours__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HRCSVC_Work_Type__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>